Feature Setting and Changes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:theme="@style/Theme.Project_CS426_RunningApp"
         tools:targetApi="31">
         <activity
-            android:name=".EditProfileActivity"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -37,6 +37,14 @@
             <meta-data
                 android:name="com.google.android.geo.API_KEY"
                 android:value="@string/google_maps_key" />
+        </activity>
+        <activity
+            android:name=".EditProfileActivity"
+            android:label="n">
+        </activity>
+        <activity
+            android:name=".SettingActivity"
+            android:label="n">
         </activity>
     </application>
 
