--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,8 +4,6 @@ plugins {
     id("com.google.gms.google-services")
 }
 
-
-
 android {
     namespace 'com.example.project_cs426_runningapp'
     compileSdk 33
@@ -40,8 +38,8 @@ android {
 }
 
 dependencies {
+    implementation 'com.squareup.picasso:picasso:2.4.0'
 
-    implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
@@ -54,10 +52,14 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation(platform("com.google.firebase:firebase-bom:32.2.3"))
     implementation("com.google.firebase:firebase-analytics-ktx")
+    implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
+
 
     // Google Maps Location Services
     implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     // Easy Permissions
     implementation 'pub.devrel:easypermissions:3.0.0'
+
+
 }
