--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,8 @@ dependencies {
     // Spotify
     implementation files("C:\\Users\\phucc\\Desktop\\spotify-app-remote-release-0.8.0.aar")
     implementation "com.google.code.gson:gson:2.6.1"
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
