--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     implementation "com.google.code.gson:gson:2.6.1"
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation files("libs/spotify-app-remote-release-0.8.0.aar")
+    implementation 'com.google.android.things:androidthings:1.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
     testImplementation 'junit:junit:4.13.2'
