--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
     compileSdk 33
 
     defaultConfig {
-            applicationId "com.example.project_cs426_runningapp"
+        applicationId "com.example.project_cs426_runningapp"
         minSdk 21
         targetSdk 33
         versionCode 1
@@ -76,7 +76,12 @@ dependencies {
     implementation("com.google.dagger:hilt-android:2.44")
     kapt("com.google.dagger:hilt-android-compiler:2.44")
 
+    //glide
+    implementation'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
+    //palette for getting dominant image color
+    implementation 'androidx.palette:palette-ktx:1.0.0'
 }
 kapt {
     correctErrorTypes = true
