--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
     compileSdk 33
 
     defaultConfig {
-            applicationId "com.example.project_cs426_runningapp"
+        applicationId "com.example.project_cs426_runningapp"
         minSdk 21
         targetSdk 33
         versionCode 1
@@ -61,6 +61,8 @@ dependencies {
     implementation("com.google.firebase:firebase-analytics-ktx")
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation("com.google.firebase:firebase-firestore-ktx")
+    implementation("com.google.firebase:firebase-storage-ktx")
+    implementation 'com.firebaseui:firebase-ui-storage:7.2.0'
     implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
     implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
 
@@ -76,7 +78,13 @@ dependencies {
     implementation("com.google.dagger:hilt-android:2.44")
     kapt("com.google.dagger:hilt-android-compiler:2.44")
 
+    //glide
+    implementation 'com.github.bumptech.glide:glide:4.14.2'
+    kapt 'com.github.bumptech.glide:compiler:4.14.2'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
+    //palette for getting dominant image color
+    implementation 'androidx.palette:palette-ktx:1.0.0'
 }
 kapt {
     correctErrorTypes = true
